--- a/numpy_matplotlib_sklearn.ipynb
+++ b/numpy_matplotlib_sklearn.ipynb
@@ -189,12 +189,27 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+   {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training accuracy: 98.12%\n",
+      "Testing accuracy: 81.14%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:use logistic regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
     "\n",
+    "clf = LogisticRegression()\n",
+    "clf.fit(X_train, Y_train)\n",
+    "Y_pred_train = clf.predict(X_train)\n",
+    "Y_pred_test = clf.predict(X_test)\n",
+    "train_accuracy = metrics.accuracy_score(Y_train, Y_pred_train)\n",
+    "test_accuracy = metrics.accuracy_score(Y_test, Y_pred_test)\n",
     "\n",
     "\n",
     "\n",
@@ -215,11 +230,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+   {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training accuracy: 84.12%\n",
+      "Testing accuracy: 82.64%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:use naive bayes\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
     "\n",
+    "clf = BernoulliNB()\n",
+    "clf.fit(X_train, Y_train)\n",
+    "Y_pred_train = clf.predict(X_train)\n",
+    "Y_pred_test = clf.predict(X_test)\n",
+    "train_accuracy = metrics.accuracy_score(Y_train, Y_pred_train)\n",
+    "test_accuracy = metrics.accuracy_score(Y_test, Y_pred_test)\n",
     "\n",
     "\n",
     "\n",
@@ -240,11 +270,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+   {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training accuracy: 97.82%\n",
+      "Testing accuracy: 79.15%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:use support vector machine\n",
     "from sklearn.svm import LinearSVC\n",
     "\n",
+    "clf = LinearSVC()\n",
+    "clf.fit(X_train, Y_train)\n",
+    "Y_pred_train = clf.predict(X_train)\n",
+    "Y_pred_test = clf.predict(X_test)\n",
+    "train_accuracy = metrics.accuracy_score(Y_train, Y_pred_train)\n",
+    "test_accuracy = metrics.accuracy_score(Y_test, Y_pred_test)\n",
     "\n",
     "\n",
     "\n",
@@ -265,10 +310,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+   {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training accuracy: 97.17%\n",
+      "Testing accuracy: 82.72%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:use SVM with another group of parameters\n",
     "\n",
+    "clf = LinearSVC(penalty='l1', dual=False, tol=1e-5)\n",
+    "clf.fit(X_train, Y_train)\n",
+    "Y_pred_train = clf.predict(X_train)\n",
+    "Y_pred_test = clf.predict(X_test)\n",
+    "train_accuracy = metrics.accuracy_score(Y_train, Y_pred_train)\n",
+    "test_accuracy = metrics.accuracy_score(Y_test, Y_pred_test)\n",
     "\n",
     "\n",
     "\n",
